# poetry-core

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  mypy.ini  pyproject.toml  stanza  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: ---bug-report.md  ---everything-else.md  ---feature-request.md  config.yml
.github/actions/poetry-install/: action.yaml
.github/workflows/: .tests-matrix.yaml  code-quality.yaml  downstream.yaml  downstream.yml  integration.yml  release.yaml  release.yml  tests.yaml  tests.yml  update-licenses.yaml  update_licenses.yml
poetry/core/: __init__.py  factory.py  poetry.py
poetry/core/_vendor/: configparser.py  pyparsing.py  vendor.txt  zipp.py
poetry/core/json/: __init__.py
poetry/core/lock/: categories.py  locker.py
poetry/core/masonry/: api.py  builder.py  metadata.py
poetry/core/pyproject/: __init__.py  constraint_dependencies_toml.py  tables.py  toml.py
poetry/core/semver/: __init__.py  empty_constraint.py  helpers.py  patterns.py  version.py  version_constraint.py  version_range.py  version_union.py
poetry/core/spdx/: __init__.py  helpers.py  license.py  updater.py
poetry/core/toml/: exceptions.py  file.py
poetry/core/utils/: _compat.py  helpers.py  toml_file.py
poetry/core/vcs/: __init__.py  git.py
poetry/core/version/: __init__.py  base.py  helpers.py  legacy_version.py  markers.py  parser.py  requirements.py  utils.py  version.py
poetry_core/: factory.py  poetry.py
poetry_core/_vendor/: attr.pyi  backports.pyi  configparser.py  configparser.pyi  enum.pyi  functools32.pyi  glob2.pyi  pkginfo.pyi  pyparsing.py  pyrsistent.pyi  scandir.pyi  tomlkit.pyi  typing.py  typing.pyi  vendor.txt  zipp.py
poetry_core/_vendor/importlib_metadata/: __init__.py  _compat.py
poetry_core/_vendor/jsonschema/: __init__.py  __main__.py  _format.py  _legacy_validators.py  _reflect.py  _types.py  _utils.py  _validators.py  cli.py  compat.py  exceptions.py  validators.py
poetry_core/_vendor/packaging/: _compat.py  _typing.py  markers.py  requirements.py  specifiers.py  tags.py  utils.py  version.py
poetry_core/_vendor/pathlib2/: __init__.py
poetry_core/_vendor/pkginfo/: commandline.py
poetry_core/json/: __init__.py
poetry_core/masonry/: api.py  builder.py  metadata.py
poetry_core/semver/: version.py  version_range.py  version_union.py
poetry_core/utils/: _compat.py  _typing.py  helpers.py  toml_file.py
poetry_core/vcs/: __init__.py  git.py
poetry_core/version/: __init__.py  helpers.py  markers.py  requirements.py
tests/: conftest.py  test_core_version.py  test_factory.py  testutils.py  types.py  utils.py
tests/fixtures/: complete.toml  complete_duplicates.toml  complete_new.toml  complete_new_dynamic.toml  complete_new_dynamic_invalid.toml  local_version.toml
tests/fixtures/pep_517_backend/: README.md  pyproject.toml
tests/fixtures/pep_517_backend_build_script/: build.py  pyproject.toml
tests/fixtures/pep_517_backend_build_script/foo/: foo.c
tests/fixtures/project_failing_strict_validation/: pyproject.toml
tests/fixtures/project_with_build_system_requires/: pyproject.toml
tests/fixtures/project_with_dependencies_with_subdirectory/: pyproject.toml
tests/fixtures/project_with_dependency_groups_complex_cycle/: pyproject.toml
tests/fixtures/project_with_extra_in_markers/: pyproject.toml
tests/fixtures/project_with_groups_and_explicit_main/: pyproject.toml
tests/fixtures/project_with_groups_and_legacy_dev/: pyproject.toml
tests/fixtures/project_with_markers_and_extras/: pyproject.toml
tests/fixtures/project_with_setup_cfg_only/: setup.cfg
tests/fixtures/project_with_tasks/: pyproject.toml
tests/fixtures/sample_project_dynamic/: pyproject.toml
tests/fixtures/sample_project_new/: pyproject.toml
tests/fixtures/sample_project_new_with_import_names/: pyproject.toml
tests/integration/: test_pep517.py  test_pep517_backend.py
tests/json/: test_poetry_schema.py
tests/lock/: test_locker.py
tests/masonry/: test_api.py  test_builder.py  test_metadata.py
tests/masonry/builders/fixtures/build_with_build_py_only/: build.py  pyproject.toml
tests/masonry/builders/fixtures/complete_dynamic/: pyproject.toml
tests/masonry/builders/fixtures/complete_new/: pyproject.toml
tests/masonry/builders/fixtures/disable_setup_py/: pyproject.toml
tests/masonry/builders/fixtures/exclude-whl-include-sdist/: pyproject.toml
tests/masonry/builders/fixtures/ext_build_py/: README.rst  build.py  pyproject.toml
tests/masonry/builders/fixtures/ext_build_py/include/: extended.hpp
tests/masonry/builders/fixtures/ext_build_py/lib/mylib/include/: mylib.h
tests/masonry/builders/fixtures/ext_build_py/lib/mylib/src/: mylib.c
tests/masonry/builders/fixtures/ext_build_py_lib/: README.rst  build.py  pyproject.toml
tests/masonry/builders/fixtures/ext_build_py_lib/src/extended/: extended.cpp
tests/masonry/builders/fixtures/ext_pyproj/: README.rst  pyproject.toml
tests/masonry/builders/fixtures/ext_pyproj_lib/: pyproject.toml
tests/masonry/builders/fixtures/generated_script_file/: build.py  pyproject.toml
tests/masonry/builders/fixtures/include_excluded_code/: pyproject.toml
tests/masonry/builders/fixtures/missing_script_files/: README.rst  pyproject.toml
tests/masonry/builders/fixtures/pep_561_stub_only_partial_namespace/: pyproject.toml
tests/pyproject/: conftest.py  test_constraint_dependencies_toml.py  test_pyproject_toml.py  test_pyproject_toml_file.py
tests/semver/: test_helpers.py  test_main.py  test_parse_constraint.py  test_utils.py  test_version.py  test_version_range.py
tests/spdx/: test_helpers.py  test_license.py  test_main.py
tests/utils/: test_helpers.py  test_namespacing.py  test_workspaces.py
tests/vcs/: test_vcs.py
tests/version/: test_markers.py  test_requirements.py  test_version_pep440.py
vendors/: pyproject.toml
vendors/patches/: jsonschema.patch  lark.patch  tomlkit.patch
vendors/wheels/: functools32-3.2.3.post2-py2.py3-none-any.whl  typing-3.7.4.1-py2.py3-none-any.whl
(+415 files in other folders)
