[tool.poetry]
name = "vendors"
version = "1.0.0"
description = "Vendors"
authors = ["Sébastien Eustace <sebastien@eustace.io>"]

license = "MIT"

readme = "README.md"

homepage = "https://github.com/python-poetry/core"
repository = "https://github.com/python-poetry/core"

keywords = ["packaging", "dependency", "poetry"]

classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = "^3.8"

fastjsonschema = "^2.18.0"
lark = "^1.1.3"
packaging = ">=22.0"
tomli = "^2.0.1"
