[project]
name = "vendors"
requires-python = ">=3.10"
dynamic = [ "version", "dependencies" ]

[tool.poetry]
package-mode = false

[tool.poetry.requires-plugins]
poetry-plugin-export = "^1.9"

[tool.poetry.dependencies]
fastjsonschema = "^2.18.0"
lark = "^1.1.3"
packaging = ">=24.2"  # PEP 639 support was added in 24.2
tomli = "^2.0.1"
