[tool.poetry]
name = "foo"
version = "1.2.3"
description = "Some description."
authors = ["Foo <foo@bar.com>"]
license = "MIT"
readme = "README.md"

homepage = "https://example.com"
repository = "https://github.com/example/example"
documentation = "https://example.com"

keywords = ["example", "packaging"]

classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = "^3.7"
attrs = "^22.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "7.1.3"

# Allows testing https://github.com/python-poetry/poetry-core/pull/492
[tool.black]
preview = true

[tool.poetry.scripts]
my-script = "my_package:main"
