[tool.poetry]
name = "foo"
version = "1.2.3"
description = "Some description."
authors = ["Foo <foo@bar.com>"]
license = "MIT"
readme = "README.md"

homepage = "https://example.com"
repository = "https://github.com/example/example"
documentation = "https://example.com"

keywords = ["example", "packaging"]

classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.poetry.dependencies]
python = "^3.7"
attrs = "^22.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "7.1.3"

# Non-regression test for https://github.com/python-poetry/poetry-core/pull/492.
# The underlying issue occurred because `tomlkit` can either return a TOML table as `Table` instance or an
# `OutOfOrderProxy` one, if a table is discontinuous and multiple sections of a table are separated by a non-related
# table, but we were too strict in our type check assertions.
# So adding `tool.black` here ensure that we have discontinuous tables, so that we don't re-introduce the issue caused
# by the type check assertion that ended up being reverted.
[tool.black]
preview = true

[tool.poetry.scripts]
my-script = "my_package:main"
