[tool.poetry]
name = "foo"
version = "1.2.3"
description = "Some description."
authors = ["Foo <foo@bar.com>"]
license = "MIT"
readme = "README.md"

homepage = "https://example.com"
repository = "https://github.com/example/example"
documentation = "https://example.com"

[tool.poetry.build]
script = "build.py"
generate-setup-file = false
