[project]
name = "simple-project"
version = "0.1.0"
description = ""
authors = [
    { name = "Your Name", email = "you@example.com" }
]
requires-python = ">=3.7"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.17.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tools.poetry]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
