[tool.poetry]
name = "build_with_build_py_only"
version = "0.1"
description = "Some description."
authors = [
    "Robert Belter <robertjohnbelter@gmail.com>"
]
license = "MIT"

readme = "README.rst"

homepage = "https://python-poetry.org/"

[tool.poetry.build]
script = "build.py"
generate-setup-file = true
