[tool.poetry]
name = "exclude-whl-include-sdist"
description = ""
authors = []
version = "0.1.0"
exclude = ["exclude_whl_include_sdist/compiled", "exclude_whl_include_sdist/*.pyx"]
include = [
    { path = "exclude_whl_include_sdist/compiled/**/*", format = "sdist" },
    { path = "exclude_whl_include_sdist/*.pyx", format = "sdist" }
]

[tool.poetry.dependencies]
python = "^3.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
