[tool.poetry]
name = "extended"
version = "0.1"
description = "Some description."
authors = [
    "Sébastien Eustace <sebastien@eustace.io>",
    "Boston Walker <boston@bostonwalker.me>"
]
license = "MIT"

readme = "README.rst"

homepage = "https://python-poetry.org/"

[tool.poetry.ext_modules."extended.extended"]
sources = [
    "extended/extended.c"
]
