[tool.poetry]
name = "missing-script-files"
version = "0.1"
description = "Some description."
authors = [
    "Sébastien Eustace <sebastien@eustace.io>"
]
readme = "README.rst"

[tool.poetry.scripts]
missing_file = {source = "not_existing_folder/not_existing_file.sh", type = "file"}


[tool.poetry.dependencies]
python = "3.6"