[tool.poetry]
name = "pep-561-stubs"
version = "0.1"
description = "PEP 561 stub namespace package example with the py.typed marker file"
authors = [
    "Henrik Bruåsdal <henrik.bruasdal@gmail.com>"
]
license = "MIT"
packages = [
    {include = "pkg-stubs"}
]

[tool.poetry.dependencies]
python = "^3.6"
